# ThreadedFileFinder

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Constants.h  EnvironmentHelper.h  FIleScanner.h  FileFinder.h  FileValidationHelper.h  StringValidationHelper.h
src/: FileFinder.cpp  FileScanner.cpp
